# kekdaboard

./: .dir-locals.el  .gitignore  .gitmodules  CMakeLists.txt  README.md  flash_left.uf2  flash_right.uf2  hid_composite.uf2  kbd_layout.xlsx  kbd_main.uf2
board/: My_Library.kicad_sym  board.kicad_pro
board/board-left/: board-left.kicad_prl  board-left.kicad_pro  board-left.kicad_sch
board/board-right/: board-right.kicad_prl  board-right.kicad_pro  board-right.kicad_sch  sym-lib-table
deploy/: deps.edn
deploy/src/: user.clj  util.clj
hello_clocks/: CMakeLists.txt  main.c
hello_gpio_irq/: CMakeLists.txt  hello_gpio_irq.c
hello_lcd/: CMakeLists.txt  lcd_canvas.c  lcd_canvas.h  lcd_fonts.h  lcd_paint.c  lcd_paint.h  lcd_st7789.c  lcd_st7789.h  main.c  master_spi.c  master_spi.h
hello_pwm/: CMakeLists.txt  hello_pwm.c
hello_shift_register/: CMakeLists.txt  main.c  shift_register.h
hello_spi_i2c/: CMakeLists.txt  ds3231.c  flash_w25qxx.h  main.c  rtc_ds3231.c  rtc_ds3231.h  sd_card.c  w25qxx.c  w25qxx.h
hello_spi_i2c/sd_card/: CMakeLists.txt  crc.c  crc.h  f_util.c  f_util.h  ff_stdio.c  ff_stdio.h  glue.c  rtc.c  sd_card.c  sd_card.h  sd_example.c
hello_spi_i2c/sd_card/ff15/: diskio.h  ff.h
hello_track_ball/: CMakeLists.txt  blink_led.h  main.c  master_spi.c  master_spi.h  srom_pmw3389.h  tb_pmw3389.c  tb_pmw3389.h
hello_uart/: CMakeLists.txt  hello_uart.c
hello_ws2812/: CMakeLists.txt  test_kbd_pixel.c  ws2812.c
hid_composite/: CMakeLists.txt
hid_composite/src/: layouts.h  main.c  tusb_config.h
kbd/: CMakeLists.txt  core0.c  core1.c  data-model.h  data_model.c  data_model.h  hw_config.h  hw_model.c  hw_model.h  input_processor.c  input_processor.h  kbd_events.h  kbd_process.c  kbd_process.h  key_layout.c  key_layout.h  key_scan.c  key_scan.h  lcd_canvas.c  lcd_canvas.h  lcd_fonts.c  lcd_st7789.c  led_pixel.c  led_pixel.h  led_pixel.pio  main.c  main_flash_side.c  main_left.c  main_right.c  peer_comm.c  peer_comm.h  pixel_anim.c  pixel_anim.h  rtc_ds3231.c  screen_date.c  screen_home.c  screen_model.h  screen_pixel.c  screen_power.c  screen_processor.c  (+19 more)
kbd/tests/: struct.c  test_shared_buffer.c
pico/: CMakeLists.txt  kbd_main.uf2  kbd_main_led.uf2
pico/hello_gpio_irq/: CMakeLists.txt
pico/hello_lcd/: CMakeLists.txt  main.c
pico/hello_spi_i2c/: CMakeLists.txt  main.c
pico/hello_spi_i2c/sd_card/: f_util.c  ff_stdio.c  ff_stdio.h  rtc.c  sd_card.h  sd_example.c
pico/hello_spi_i2c/sd_card/ff15/: ffconf.h
pico/hello_track_ball/: blink_led.h
pico/hello_ws2812/: ws2812.pio
pico/hid_composite/: CMakeLists.txt
pico/hid_composite/src/: layouts.h  main.c
pico/kbd/: core0.c  core1.c  flash_store.c  flash_store.h  flash_w25qxx.c  flash_w25qxx.h  hw_config.h  key_scan.h  lcd_canvas.c  lcd_fonts.c  lcd_st7789.c  led_pixel.c  led_pixel.pio  main_flash_side.c  master_spi.c  rtc_ds3231.h  screen_power.c  screen_scan.c  screen_tb.c  side_left.c  srom_pmw3389.h  uart_comm.c
pico/kbd/tests/: test_flash_store.c
picow/: .clang-format  CMakeLists.txt  pico_fota_bootloader
picow/hello_blink/: CMakeLists.txt  picow_blink.c
picow/hello_bt/: CMakeLists.txt  ble_client.c  ble_server.c  ble_test.c  gatt_streamer_server.c  le_streamer_client.c  lwipopts.h
picow/hello_wifi/: CMakeLists.txt  lwipopts.h  picow_access_point.c  picow_client.c
picow/hello_ws2812/: CMakeLists.txt  test_kbd_pixel.c  ws2812.c  ws2812.pio
picow/kbd/: CMakeLists.txt  ble_client.c  ble_comm.c  ble_comm.h  ble_server.c  ble_server.gatt  ble_server_left.gatt  ble_server_right.gatt  btstack_config.h  core0.c  core1.c  data_model.c  data_model.h  hw_config.h  hw_model.c  hw_model.h  input_processor.c  input_processor.h  kbd_events.h  key_layout.c  key_layout.h  lwipopts.h  main.c  main.h  my_cyw43_configport.h  pixel_anim.c  pixel_anim.h  screen_model.c  screen_model.h  tcp_server.c  tcp_server.h  tusb_config.h  udp_server.c  udp_server.h  usb_hid.c  usb_hid.h
picow/kbd/ap/: dhcp_server.c  dhcp_server.h  main.c  main.h
picow/kbd/left/: main.c  main.h
picow/kbd/right/: main.c  main.h
picow/kbd/screen/: date.c  pixel.c  power.c  scan.c  screen_date.c  screen_model.h  screen_pixel.c  screen_power.c  screen_processor.c  screen_processor.h  screen_scan.c  screen_tb.c  screen_welcome.c  tb.c  welcome.c
picow/kbd/usb/: usb_hid.c
picow/kbd/util/: flash_store.c  flash_store.h  lcd_fonts.c  led_pixel.c  led_pixel.h  led_pixel.pio  pixel_anim.c  pixel_anim.h  rtc_model.h  shared_buffer.c  srom_pmw3389.c  tb_pmw3389.c  usb_descriptors.c  usb_descriptors.h
